fluentDDaemonSets.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: efk
  uid: 59be3ee7-25db-431c-9f25-fbd12b2e16de
  resourceVersion: '1142370'
  generation: 2
  creationTimestamp: '2024-04-29T22:00:09Z'
  annotations:
    deprecated.daemonset.template.generation: '2'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{},"name":"fluentd","namespace":"efk"},"spec":{"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"fluentd"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"fluentd"}},"spec":{"containers":[{"env":[{"name":"FLUENT_ELASTICSEARCH_HOST","value":"elasticsearch.kube-logging.svc.cluster.local"},{"name":"FLUENT_ELASTICSEARCH_PORT","value":"9200"},{"name":"FLUENT_ELASTICSEARCH_SCHEME","value":"http"},{" [...]
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-29T22:00:09Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:deprecated.daemonset.template.generation: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:app: {}
            f:spec:
              f:containers:
                k:{"name":"fluentd"}:
                  .: {}
                  f:env:
                    .: {}
                    k:{"name":"FLUENTD_SYSTEMD_CONF"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"FLUENT_ELASTICSEARCH_HOST"}:
                      .: {}
                      f:name: {}
                    k:{"name":"FLUENT_ELASTICSEARCH_PORT"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                    k:{"name":"FLUENT_ELASTICSEARCH_SCHEME"}:
                      .: {}
                      f:name: {}
                      f:value: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:resources:
                    .: {}
                    f:limits:
                      .: {}
                      f:memory: {}
                    f:requests:
                      .: {}
                      f:cpu: {}
                      f:memory: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/fluentd/etc/fluent.conf"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:subPath: {}
                    k:{"mountPath":"/var/lib/docker/containers"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:readOnly: {}
                    k:{"mountPath":"/var/log"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:serviceAccount: {}
              f:serviceAccountName: {}
              f:terminationGracePeriodSeconds: {}
              f:tolerations: {}
              f:volumes:
                .: {}
                k:{"name":"fluentd-config"}:
                  .: {}
                  f:configMap:
                    .: {}
                    f:defaultMode: {}
                    f:name: {}
                  f:name: {}
                k:{"name":"varlibdockercontainers"}:
                  .: {}
                  f:hostPath:
                    .: {}
                    f:path: {}
                    f:type: {}
                  f:name: {}
                k:{"name":"varlog"}:
                  .: {}
                  f:hostPath:
                    .: {}
                    f:path: {}
                    f:type: {}
                  f:name: {}
          f:updateStrategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
    - manager: node-fetch
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-30T14:19:23Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:template:
            f:spec:
              f:containers:
                k:{"name":"fluentd"}:
                  f:env:
                    k:{"name":"FLUENT_ELASTICSEARCH_HOST"}:
                      f:value: {}
    - manager: kubelite
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-30T15:34:49Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:currentNumberScheduled: {}
          f:desiredNumberScheduled: {}
          f:numberAvailable: {}
          f:numberMisscheduled: {}
          f:numberReady: {}
          f:observedGeneration: {}
          f:updatedNumberScheduled: {}
      subresource: status
  selfLink: /apis/apps/v1/namespaces/efk/daemonsets/fluentd
status:
  currentNumberScheduled: 3
  numberMisscheduled: 0
  desiredNumberScheduled: 3
  numberReady: 3
  observedGeneration: 2
  updatedNumberScheduled: 3
  numberAvailable: 3
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fluentd
    spec:
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
            type: ''
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
            type: ''
        - name: fluentd-config
          configMap:
            name: fluentd-config
            defaultMode: 420
      containers:
        - name: fluentd
          image: >-
            fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-elasticsearch7-1.1
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: fluentd-config
              mountPath: /fluentd/etc/fluent.conf
              subPath: fluent.conf
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              readOnly: true
              mountPath: /var/lib/docker/containers
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: fluentd
      serviceAccount: fluentd
      securityContext: {}
      schedulerName: default-scheduler
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  revisionHistoryLimit: 10
