kibanaService.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: efk
  uid: 32be564c-b69a-4c6a-a19d-66a12189ae58
  resourceVersion: '1128680'
  creationTimestamp: '2024-04-30T13:59:38Z'
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"kibana","namespace":"efk"},"spec":{"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"port":5601,"protocol":"TCP"}],"selector":{"name":"kibana"},"sessionAffinity":"None","type":"ClusterIP"}}
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: v1
      time: '2024-04-30T13:59:38Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ipFamilies: {}
          f:ipFamilyPolicy: {}
          f:ports:
            .: {}
            k:{"port":5601,"protocol":"TCP"}:
              .: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:sessionAffinity: {}
          f:type: {}
    - manager: node-fetch
      operation: Update
      apiVersion: v1
      time: '2024-04-30T14:03:22Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:selector: {}
  selfLink: /api/v1/namespaces/efk/services/kibana
status:
  loadBalancer: {}
spec:
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
  selector:
    app: kibana
  clusterIP: 10.152.183.44
  clusterIPs:
    - 10.152.183.44
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
